--- a/nmpharma/src/App.css
+++ b/nmpharma/src/App.css
@@ -13,5 +13,15 @@ html{
   background-color:#E5E5E5;
 }
 
+::-webkit-scrollbar {
+  width: 10px; 
+}
 
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; 
+}
 
+::-webkit-scrollbar-thumb {
+  background-color: #888; 
+  border-radius: 4px; 
+}
