--- a/nmpharma/src/App.css
+++ b/nmpharma/src/App.css
@@ -7,7 +7,7 @@
   padding: 0;
   
 }
-
+/* 
 html{
   color: #000;
   background-color:#E5E5E5;
@@ -24,7 +24,7 @@ html{
 ::-webkit-scrollbar-thumb {
   background-color: #888; 
   border-radius: 4px; 
-}
+} */
 
 /* * {
   border: 1px solid red !important;
